# cookiecutter-uv

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini  zensical.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  update-dependencies.yml
cookiecutter_uv/: cli.py
cookiecutter_uv/cicd/: __init__.py  cli.py  config.py  fetchers.py  updaters.py
docs/: README.md  index.md  prompt_arguments.md  tutorial.md
docs/dl_features/: superpowers.md  training.md  tutorials.md
docs/features/: cicd.md  codecov.md  devcontainer.md  docker.md  index.md  linting.md  makefile.md  mkdocs.md  publishing.md  tox.md  uv.md
docs/stylesheets/: extra.css
features/cicd/: index.html
features/codecov/: index.html
features/devcontainer/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
prompt_arguments/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_cicd.py  test_combinations.py  test_cookiecutter.py  test_generated_project_root.py
tests/data/cicd/: sample_action.yml  sample_precommit.yaml  sample_pyproject.toml
tutorial/: index.html
{{cookiecutter.project_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_BSD  LICENSE_ISC  LICENSE_MIT  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json  postCreateCommand.sh
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: labeler.yml  main.yml  on-release-main.yml  validate-codecov-config.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/docs/features/: environment.md  evaluation.md  superpowers.md
{{cookiecutter.project_name}}/scripts/: gen_ref_nav.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_datamodules.py  test_eval.py  test_train.py
{{cookiecutter.project_name}}/tests/helpers/: package_available.py  run_if.py  run_sh_command.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __main__.py  base.py  logger.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/configs/data/: mnist.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/configs/experiment/: example.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/configs/model/: mnist.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/configs/paths/: default.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/data/: mnist_datamodule.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/models/: mnist_module.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/scripts/: eval.py  train.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
